--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   	<meta charset="utf-8">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-  	<title>{{ exhibition }}</title>
+  	<title>{{ Treasure Trove }}</title>
  	 <meta name="description" content="Trove Exhibition Application, powered by Trove">
   	<meta name="author" content="Trove">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -49,10 +49,10 @@
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption7"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dapibus scelerisque eros, ut ultrices.</div>
 
     <!-- Exhibition details -->
-    <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">Exhibition Name</h1>
+    <h1 ng-hide="listHide" class="ng-hide" id="Treasure Trove" class="page-header">Exhibition Name</h1>
     <h2 ng-hide="listHide" class="ng-hide" id="exhibition-tagline"></h2>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-description">
-       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis finibus libero in dui finibus, sit amet tincidunt nulla hendrerit. Aenean blandit fermentum nisl, quis sollicitudin neque lobortis non. Quisque vel condimentum tortor, in aliquam lacus. Morbi placerat egestas risus sit amet eleifend. Nam vitae risus maximus, tempus metus sed, tincidunt risus. Ut aliquet ligula a viverra efficitur. Nullam a eros tortor. Aliquam lacinia commodo turpis, nec tincidunt ligula condimentum eu. Nunc gravida auctor risus, ac scelerisque nisi tempus id. Nullam pulvinar ornare turpis, in fringilla massa cursus id. Cras egestas risus volutpat luctus auctor. Proin semper diam augue. Mauris ut ultrices enim, sit amet laoreet eros. Phasellus euismod, lectus vel dictum sodales, massa elit interdum orci, sed consectetur risus dolor. 
+       Patrons of the National Library who have visited the Treasures Gallery or used the Trove website will know the riches these two experiences can bring. The Treasures Gallery is our permanent exhibition space and offers a glimpse at some extraordinary highlights found within the Library’s holdings. Trove is and exciting access point for digitised material that might otherwise be inaccessible. We are bringing these together in one app to offer an expanded insight into the Library’s collections. Come and delve into the Treasure Trove. You never know what you might find.  
     </div>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-highlights">
       EXHIBITION HIGHLIGHTS
@@ -60,9 +60,9 @@
 
       <div ng-hide="listHide" class="ng-hide" id="exhibition-footer">
       <h1>Visit the Exhibition</h1>
-      <h2><a href="#">Exhibition Link Here</a></h2>
-      <p>Location of exhibition</p>
-      <p>Dates exhibition is available</p>
+      <h2><a href="#">https://www.nla.gov.au/treasures</a></h2>
+      <p>Treasures Gallery, National Library of Australia</p>
+      <p>October 2017 - April 2018</p>
     </div>
 
     <ul ng-hide="listHide" class="ng-hide" id="lists">
