--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     <ul ng-hide="listHide" class="ng-hide" id="lists">
 
       <!-- CHANGE THIS TO LIST THE TROVE LISTS THAT MAKE UP YOUR EXHIBITION -->
-        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=110461">List One</a></li>
-        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=110462">List Two</a></li>
-        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=109698">List Three</a></li>
-        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=109697">List Four</a></li>
-        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108231">List Five</a></li>
-        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=110489">List Six</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108913">Early Exploration</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108938">Early Settlement</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108939">Colonial Life</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108944">Federation</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108934">Australia in the 20th Century</a></li>
+        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108945">Waving the Red Flag</a></li>
     </ul>
     <script>
       // ADD YOUR TROVE API KEY
