--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
 
     <!-- Exhibition Highlights Images and Captions -->
     <div ng-hide="listHide" class="ng-hide" id="highlights-image1">img/high_1.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption1"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dapibus scelerisque eros, ut ultrices.</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption1"> Melchisédech Thevenot 'Hollandia Nova detecta 1644 : Terre Australe decouuerte l'an 1644'</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image2">img/high_2.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dapibus scelerisque eros, ut ultrices.</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption2"> Henry Girtten 'Hobarton,' 1857</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image3">img/high_3.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption3"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dapibus scelerisque eros, ut ultrices.</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption3"> Frank Hurley 'Infantry moving forward to take up front line positions at evening, their images reflected in a rain-filled crater at Hooge, October, 1917'.</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image4">img/high_4.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption4"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dapibus scelerisque eros, ut ultrices.</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption4"> Port Jackson Painter 'Five half-length portraits of Aborigines' 1790.</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image5">img/high_5.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption5"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dapibus scelerisque eros, ut ultrices.</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption5"> Eadward William Searle 'Southern Sun flying over Sydney Harbour Bridge, 1931'.</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image6">img/high_6.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption6"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dapibus scelerisque eros, ut ultrices.</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption6"> Charles Coulter 'An ideal federal city, Lake George, N.S.W.' 1901.</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image7">img/high_7.jpg</div>
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption7"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dapibus scelerisque eros, ut ultrices.</div>
