--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   	<meta charset="utf-8">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-  	<title>{{ Treasure Trove }}</title>
+  	<title> Treasure Trove </title>
  	 <meta name="description" content="Trove Exhibition Application, powered by Trove">
   	<meta name="author" content="Trove">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -60,7 +60,7 @@
 
       <div ng-hide="listHide" class="ng-hide" id="exhibition-footer">
       <h1>Visit the Exhibition</h1>
-      <h2><a href="#">https://www.nla.gov.au/treasures</a></h2>
+      <h2><a href="#">Treasure Trove</a></h2>
       <p>Treasures Gallery, National Library of Australia</p>
       <p>October 2017 - April 2018</p>
     </div>
