--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   	<meta charset="utf-8">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-  	<title> Treasure Trove </title>
+  	<title>Treasure Trove</title>
  	 <meta name="description" content="Trove Exhibition Application, powered by Trove">
   	<meta name="author" content="Trove">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -50,7 +50,7 @@
 
     <!-- Exhibition details -->
     <h1 ng-hide="listHide" class="ng-hide" id="exhibition name" class="page-header">Treasure Trove</h1>
-    <h2 ng-hide="listHide" class="ng-hide" id="Come and delve into the Treasure Trove"></h2>
+    <h2 ng-hide="listHide" class="ng-hide" id="Treasure Trove"></h2>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-description">
        Patrons of the National Library who have visited the Treasures Gallery or used the Trove website will know the riches these two experiences can bring. The Treasures Gallery is our permanent exhibition space and offers a glimpse at some extraordinary highlights found within the Library’s holdings. Trove is and exciting access point for digitised material that might otherwise be inaccessible. We are bringing these together in one app to offer an expanded insight into the Library’s collections. Come and delve into the Treasure Trove. You never know what you might find.  
     </div>
