--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   	<meta charset="utf-8">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-  	<title>Treasure Trove<title>
+  	<title> Treasure Trove </title>
  	 <meta name="description" content="Trove Exhibition Application, powered by Trove">
   	<meta name="author" content="Trove">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
