--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- EDIT THIS SECTION TO INCLUDE YOUR EXHIBITION DETAILS -->
     <!-- Background Images -->
-    <div ng-hide="listHide" class="ng-hide" id="background-image1" class="page-header">img/HS_1.png</div>
+    <div ng-hide="listHide" class="ng-hide" id="background-image1" class="page-header">img/HS_1.jpg</div>
     <div ng-hide="listHide" class="ng-hide" id="background-image2" class="page-header">img/HS_2.jpg</div>
     <div ng-hide="listHide" class="ng-hide" id="background-image3" class="page-header">img/HS_3.jpg</div>
 
