--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Exhibition Highlights Images and Captions -->
     <div ng-hide="listHide" class="ng-hide" id="highlights-image1">img/High_1.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption1"> Melchisédech Thevenot 'Hollandia Nova detecta 1644 : Terre Australe decouuerte l'an 1644'</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption1"> George Carter 'Death of Captain Cook,' 1781</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image2">img/High_2.jpg</div>
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption2"> Henry Girtten 'Hobarton,' 1857</div>
