--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption6"> Charles Coulter 'An ideal federal city, Lake George, N.S.W.' 1901.</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image7">img/High_7.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption7"> J.M. Crossland 'Portrait of Samuel Kandwillan, a pupil of the natives' training institution, Poonindie, South Australia' 1854.</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption7"> 'Convict uprising at Castle Hill' 1804.</div>
 
     <!-- Exhibition details -->
     <h1 ng-hide="listHide" class="ng-hide" id="exhibitionname" class="page-header">Treasure Trove</h1>
