--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption3"> Frank Hurley 'Infantry moving forward to take up front line positions at evening, their images reflected in a rain-filled crater at Hooge, October, 1917'.</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image4">img/High_4.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption4"> Port Jackson Painter 'Five half-length portraits of Aborigines' 1790.</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption4"> Thomsa Whitcombe 'Departure of the whaler Britannia from Sydney Cove, 1798'.</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image5">img/High_5.jpg</div>
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption5"> Richard James Hogg 'Crowds gathered at Bourke Street outside Myers store, watching speakers during Vietnam War Moratorium march, Melbourne, May 1970'.</div>
