--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption7"> 'Convict uprising at Castle Hill' 1804.</div>
 
     <!-- Exhibition details -->
-    <h1 ng-hide="listHide" class="ng-hide id="exhibition-name" class="page-header"> Exhibition Name </h1>
+    <h1 ng-hide="listHide" class="ng-hide id="exhibition-name" class="page-header">TreasureTrove</h1>
     <h2 ng-hide="listHide" class="ng-hide" id="TreasureTrove">Treasure Trove</h2>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-description">
        Patrons of the National Library who have visited the Treasures Gallery or used the Trove website will know the riches these two experiences can bring. The Treasures Gallery is our permanent exhibition space and offers a glimpse at some extraordinary highlights found within the Library’s holdings. Trove is and exciting access point for digitised material that might otherwise be inaccessible. We are bringing these together in one app to offer an expanded insight into the Library’s collections. Come and delve into the Treasure Trove. You never know what you might find.  
