--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div ng-hide="listHide" class="ng-hide" id="exhibition-footer">
       <h1>Visit the Exhibition</h1>
-      <h2><a href="#">Exhibition Link Here</a></h2>
+      <h2><a href="#">TreasureTrove</a></h2>
       <p>Treasures Gallery, National Library of Australia</p>
       <p>October 2017 - April 2018</p>
     </div>
