--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption4"> Thomsa Whitcombe 'Departure of the whaler Britannia from Sydney Cove, 1798'.</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image5">img/High_5.jpg</div>
-    <div ng-hide="listHide" class="ng-hide" id="highlights-caption5"> Richard James Hogg 'Crowds gathered at Bourke Street outside Myers store, watching speakers during Vietnam War Moratorium march, Melbourne, May 1970'.</div>
+    <div ng-hide="listHide" class="ng-hide" id="highlights-caption5"> Edward Mabo 'Dauar and Waier Islands' 1964.</div>
 
     <div ng-hide="listHide" class="ng-hide" id="highlights-image6">img/High_6.jpg</div>
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption6"> Charles Coulter 'An ideal federal city, Lake George, N.S.W.' 1901.</div>
