--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108913">Early Exploration</a></li>
         <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108938">Early Settlement</a></li>
         <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108939">Colonial Life</a></li>
-        <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108944">Federation</a></li>
         <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108934">Australia in the 20th Century</a></li>
         <li><a class="list-link" href="http://trove.nla.gov.au/list?id=108945">Waving the Red Flag</a></li>
+	<li><a class="list-link" href="https://trove.nla.gov.au/list?id=111923">Coming Attractions</a></li>
     </ul>
     <script>
       // ADD YOUR TROVE API KEY
